## Process this file with automake to produce Makefile.in 

themedir = $(pkgdatadir)/plugins/default_theme
theme_DATA = Plugin.xml \
resources/button_c.bmp \
resources/button_c_p.bmp \
resources/button_l.bmp \
resources/button_l_p.bmp \
resources/button_r.bmp \
resources/button_r_p.bmp \
resources/AlephJPSansMono-Bold.ttf \
resources/frame_b.bmp \
resources/frame_bl.bmp \
resources/frame_br.bmp \
resources/frame_l.bmp \
resources/frame_r.bmp \
resources/frame_t.bmp \
resources/frame_tl.bmp \
resources/frame_tr.bmp \
resources/AlephJPSansMonoLicense.txt \
resources/list_b.bmp \
resources/list_bl.bmp \
resources/list_br.bmp \
resources/list_l.bmp \
resources/list_r.bmp \
resources/list_t.bmp \
resources/list_tl.bmp \
resources/list_tr.bmp \
resources/slider.bmp \
resources/slider_c.bmp \
resources/slider_l.bmp \
resources/slider_r.bmp \
resources/KikaiChokokuJIS-Md.otf \
resources/KikaiChokokuJIS-Md.README \
resources/theme2.mml \
resources/thumb_b.bmp \
resources/thumb_bc.bmp \
resources/thumb_c.bmp \
resources/thumb_t.bmp \
resources/thumb_tc.bmp \
resources/tiny_button_c.bmp \
resources/tiny_button_l.bmp \
resources/tiny_button_r.bmp

EXTRA_DIST = $(theme_DATA)
